Sun Feb 21 00:38:40 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Digest/Index.pm (done): Add To and From headers.

	* bin/mj_email (do_qmail): New function.  When called with -Q,
 	look at $ENV{LOCAL} and fake various elements of %opts to make it
 	look to the rest of the code as if the appropriate flags had been
 	passed.
  	
	Delay loading most modules until after the qmail checks have been
 	done.

	* lib/Mj/Digest/MIME.pm (new): Use 'to' argument.

	* lib/Mj/Digest/Text.pm (new): Use 'to' argument.

	* lib/Mj/Digest/Build.pm (build): Pass on 'to' argument.

	* lib/Mj/Resend.pm (_post): Pass 'to' parameter to digest_build
 	containing the list address (which is close to what Mj1 does, but
 	not exactly since we don't have a list-digest address anywhere).

	* bin/mj_email (connect_no_parse): Allow /r/n as well as /n to be
 	a blank line.

	* postinstall (do_default_config): Bring prompt for global
 	password in line with what is actually done.

	* lib/Mj/Resend.pm (post): Move decision to exit without acking
 	until after we've tested to see if the message should be posted.
  	Oops.

	* postinstall (do_default_config): Fix undef warning when whoami
 	isn't qualified.

	* lib/Mj/Digest/Text.pm (get_text): Add some additional whitespace
 	when nuking attachments.

	* lib/Majordomo.pm: Bump version number in preparation for
 	snapshot.

Sat Feb 20 00:28:45 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Access.pm (_a_reply, _a_replyfile): Deal with 'NONE'.
	(_a_replyfile): Return file info as fourth argument.
	(_a_mailfile): Return temp as fifth argument, not fourth.
	(list_access_check): Deal with additional argument returned by
 	replyfile.

	* lib/Mj/Resend.pm (post): Major improvements to acking.  Use new
 	ack_denials_always and ack_attach_original variables.  Add
 	$HEADERS expansion.  Receive replyfile info data from
 	list_access_check and make use of it.  Properly ack stalls on
 	'ackimportant', not just 'ackall'.
